# scalar

./: Cargo.toml  LICENSE  README.md
src/: abs.rs  ident.rs  lib.rs  math_func.rs  trigm.rs
